# meno

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  BUILD-PLAN.md  CLAUDE.md  Containerfile  PROJECT.md  README.md  meno.sh  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.json
.codex/: config.toml  migrate-to-codex-report.txt
brand/: README.md
deploy/: README.md  compose.yaml
docs/: 01-memory-foundations.md  02-system-architecture.md  03-triggering-and-retrieval.md  04-default-mode.md  05-spontaneous-impulse.md  06-attention-and-focus.md  07-cognitive-vitality.md  decisions.md  instance-layout.md  operating.md  realisation-plan.md  redesign.md  reflection.md  review-findings.md  revision-notes.md  roadmap-ii.md  roadmap.md  slack-app.md  system-design.md
meno/: __init__.py  __main__.py  aliveness.py  annotator.py  bus.py  cli.py  config.py  consolidation.py  control.py  curiosity.py  driver.py  embeddings.py  event.py  governor.py  graph.py  home.py  library.py  models.py  persistence.py  processors.py  runtime.py  self_model.py  sensorium.py  store.py  streams.py  working_set.py  zombie_run.py
meno_adapters/: __init__.py  _redact.py  base.py  cli.py  knowledge.py  loader.py  loopback.py  secrets.py  slack.py
skills/: association_traversal.md
slack/: manifest.yaml
src/: agent.py  attention.py  cognition.py  cognition_smoke.py  consolidation.py  db.py  dreaming.py  embeddings.py  forgetting.py  instances.py  journal.py  mcp_server.py  memory_projection.py  modes.py  reflection.py  rehearsal.py  retrieval.py  schema.py  seed.py  skills.py  typed_retrieval.py  vitality.py
state/: agent-state.json  build-progress.json  loop-state.json  realisation-progress.json  rethink-progress.json  roadmap-ii-progress.json  tick-protocol.md  zombie-evidence.md  zombie-graph.json
tests/: test_7a_stubs.py  test_7b_agent.py  test_7c_embeddings.py  (+48 more)
(+27 files in other folders)
