[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "meno"
version = "2.0.0"
description = "A cognitive kernel: associative memory, a default-mode loop, and self-directed cognition."
readme = "README.md"
requires-python = ">=3.11"   # D22: stdlib tomllib for meno.toml; daemon/container target
dependencies = []   # core runs with the standard library only (offline by default)

[project.optional-dependencies]
dev = ["pytest"]
anthropic = ["anthropic"]   # optional: real cognitive-tier models
local = ["sentence-transformers"]   # optional: real local cold embedder (D20); pulls in torch
slack = ["slack_sdk"]   # optional: the Slack integration adapter (I1/I2)
all = ["pytest", "anthropic", "sentence-transformers", "slack_sdk"]

[project.scripts]
meno = "meno_adapters.cli:main"   # the composition root: init/run/status + config-driven adapters

[tool.setuptools.packages.find]
include = ["meno*"]   # meno + meno_adapters

[tool.pytest.ini_options]
testpaths = ["tests"]
